fixed z-index in CompletedModal.css, add logic of closing DeletedModal by backdrop

--- a/src/components/CompletedModal/CompletedModal.module.css
+++ b/src/components/CompletedModal/CompletedModal.module.css
@@ -6,6 +6,7 @@
   left: 0;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .modal {
